# barge-ocean.js

./: .gitignore  README.md  dns.yml  start_ocean.sh
algorithm/: generate_input.py  input.json  prediction.py  pyproject.toml
api/: Dockerfile  pyproject.toml  start.sh
api/src/adapters/: ocean.py
api/src/db/: assets.py  computes.py
api/src/handlers/: assets.py  compute.py
api/src/utils/: decorators.py  exceptions.py
app/: Dockerfile  docker-entrypoint.sh
app/conf/: nginx.conf
app/src/: App.css
app/src/components/Assets/: UploadAssetForm.tsx
app/src/components/Compute/: ComputeList.tsx
app/src/components/Utils/: Preview.tsx
app/src/pages/Assets/: Assets.tsx
app/src/pages/Compute/: Compute.tsx
app/src/pages/Marketplace/: Marketplace.tsx
assets/: mancio-alg.json  sogei-alg.json  sogei-data.json
aws/: eks.yaml  template.yaml
compose-files/: mongo.yml  sanic.yml  web.yml
contracts/: Dockerfile  deploy_docker.sh
database/: Dockerfile
database/scripts/: initiate_replica.sh
ocean-c2d-flow/: Chart.yaml  values.yaml
ocean-c2d-flow/templates/: api.yml  aquarius.yml  common.yml  elasticsearch.yml  ganache.yaml  ingress.yml  mongo.yml  ocean-contracts.yml  provider.yml  web.yml
