[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["Alessandro Mancini <dott.alessandro.mancini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
